# vera-rag-assistant

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  document_loader.py  main.py  rag.py  schemas.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnswerCard.tsx  FileUpload.tsx  QuestionBox.tsx  SourceList.tsx
scripts/: check-env.mjs  clean-data.mjs  clean-secrets.mjs  doctor.mjs  setup.mjs
