[project]
name = "vera-backend"
version = "1.0.0"
description = "FastAPI backend for VERA, a source-grounded LangChain RAG assistant."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.1",
  "langchain>=0.3.0",
  "langchain-chroma>=0.1.2",
  "langchain-openai>=0.2.0",
  "langchain-text-splitters>=0.3.0",
]

[tool.uv]
package = false
